fix: display none scrollbar

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -128,3 +128,8 @@
         @apply bg-black text-foreground ;
     }
 }
+
+
+::-webkit-scrollbar {
+    @apply w-0 h-0;
+}
